--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <li><a href="#" class="social twitter">Twitter</a></li>
         <li><a href="#" class="social linkedin">LinkedIn</a></li>
         <li><a href="#" class="social github">Github</a></li>
+        <li><a href="#" class="social github">test</a></li>
       </ul>
 
     </footer>
